k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: toba-mas
  labels:
    name: toba-mas
    environment: production
